# turbofan-dashboard

./: Dockerfile  Dockerrun.aws.json  LICENSE  README.md  pyproject.toml  requirements.txt
tests/: test_turbofan_dashboard.py
turbofan_dashboard/: dashboard.py  html_header.py
turbofan_dashboard/data/: Xtest.p  ytrain.p
