[tool.poetry]
name = "turbofan-dashboard"
version = "0.1.0"
description = ""
authors = ["Leon Adams <skorpio11@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
plotly = "^5.2.1"
pandas = "^1.3.2"
streamlit = "^0.86.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
